--- a/content/index.html
+++ b/content/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html><html>
         <head>
-        <title>CMSiMDE</title>
+        <title>40823235</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
@@ -153,6 +153,9 @@ init_mathjax();
 <p> <a href="https://dartpad.dev?id=2cc74632ff18c8876ed35778c65f882c">https://dartpad.dev?id=2cc74632ff18c8876ed35778c65f882c</a></p>
 <p></p>
 <p><iframe height="600" src="https://dartpad.dev/embed-inline.html?id=2cc74632ff18c8876ed35778c65f882c&amp;verticalRatio=60" width="800"></iframe></p>
+<p>程式碼</p>
+<p>int i;<br/>int sum;</p>
+<p>main() {<br/> sum = 0;<br/> for (i=1; i &lt;= 10 ; i++) {<br/> sum += i;<br/> print("$sum");<br/>}<br/> print('sum = $sum');<br/>}</p>
 <p><iframe height="600" src="https://dartpad.dev/embed-inline.html?
 gh_owner=mdecourse&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/for&amp;theme=dart" width="800"><iframa></iframa></iframe></p><br /> <a href='USB.html'>Next</a> >> USB</div>
         
