--- a/content/About.html
+++ b/content/About.html
@@ -150,6 +150,7 @@ init_mathjax();
           
         </header>
     <div id="tipue_search_content"> <a href='USB.html'>Next</a> >> USB<br /><h1>About</h1>
+<p><img alt="" height="197" src="./../images/1.jpg" width="213"/></p>
 <p></p>
 <p> <a href="https://dartpad.dev?id=2cc74632ff18c8876ed35778c65f882c">https://dartpad.dev?id=2cc74632ff18c8876ed35778c65f882c</a></p>
 <p></p>
@@ -160,7 +161,7 @@ init_mathjax();
 <p><iframe height="600" src="https://dartpad.dev/embed-inline.html?
 gh_owner=mdecourse&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/for&amp;theme=dart" width="800"><iframa></iframa></iframe></p>
 <p><iframe height="600" src="https://dartpad.dartlang.org/?id=d0d7491cda1803cd2878a000f2470fb6" width="800"><iframa></iframa></iframe></p>
-<img alt="" height="187" src="./../images/1.png" width="285"/>
+<p><img alt="" height="187" src="./../images/1.png" width="285"/></p>
 <p><img alt="" height="156" src="./../images/2.PNG" width="283"/></p>
 <br /> <a href='USB.html'>Next</a> >> USB</div>
         
