--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,5 +1,5 @@
 <h1>About</h1>
-<p></p>
+<p><img alt="" height="197" src="/images/1.jpg" width="213"/></p>
 <p></p>
 <p> <a href="https://dartpad.dev?id=2cc74632ff18c8876ed35778c65f882c">https://dartpad.dev?id=2cc74632ff18c8876ed35778c65f882c</a></p>
 <p></p>
@@ -12,6 +12,7 @@ gh_owner=mdecourse&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/for&amp;them
 <p><iframe height="600" src="https://dartpad.dartlang.org/?id=d0d7491cda1803cd2878a000f2470fb6" width="800"><iframa></iframa></iframe></p>
 <p><img alt="" height="187" src="/images/1.png" width="285"/></p>
 <p><img alt="" height="156" src="/images/2.PNG" width="283"/></p>
+<p><a href="https://www.youtube.com/watch?v=h7PCrruTkko" title="期中影片">https://www.youtube.com/watch?v=h7PCrruTkko</a></p>
 <h1>USB</h1>
 <h3>USB2</h3>
 <p></p>
