--- a/content/USB.html
+++ b/content/USB.html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='USB.html'>USB</a><ul class='dropdown'><li><a href='USB2.html'>USB2</a></li>
+                     <li><a href='First.html'>First</a><li class='has-children'><a href='USB.html'>USB</a><ul class='dropdown'><li><a href='USB2.html'>USB2</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,8 +149,8 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">About << <a href='About.html'>Previous</a> <a href='USB2.html'>Next</a> >> USB2<br /><h1>USB</h1>
-<br />About << <a href='About.html'>Previous</a> <a href='USB2.html'>Next</a> >> USB2</div>
+    <div id="tipue_search_content">First << <a href='First.html'>Previous</a> <a href='USB2.html'>Next</a> >> USB2<br /><h1>USB</h1>
+<br />First << <a href='First.html'>Previous</a> <a href='USB2.html'>Next</a> >> USB2</div>
         
     <!-- footer -->
       <div class="container">
