--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -1,18 +1,57 @@
-<h1>About</h1>
+<h1>First</h1>
+<p><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">關於</span></span><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/h7PCrruTkko" width="560"></iframe></p>
+<p><a href="https://www.youtube.com/watch?v=h7PCrruTkko" title="期中影片"><span style="vertical-align: inherit;">https://www.youtube.com/watch?v=h7PCrruTkko</span></a></p>
 <p><img alt="" height="197" src="/images/1.jpg" width="213"/></p>
 <p></p>
-<p> <a href="https://dartpad.dev?id=2cc74632ff18c8876ed35778c65f882c">https://dartpad.dev?id=2cc74632ff18c8876ed35778c65f882c</a></p>
+<p> <a href="https://dartpad.dev?id=2cc74632ff18c8876ed35778c65f882c"><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">https://dartpad.dev?id=2cc74632ff18c8876ed35778c65f882c</span></span></a></p>
 <p></p>
 <p><iframe height="600" src="https://dartpad.dev/embed-inline.html?id=2cc74632ff18c8876ed35778c65f882c&amp;verticalRatio=60" width="800"></iframe></p>
 <p>程式碼</p>
-<p>int i;<br/>int sum;</p>
-<p>main() {<br/> sum = 0;<br/> for (i=1; i &lt;= 10 ; i++) {<br/> sum += i;<br/> print("$sum");<br/>}<br/> print('sum = $sum');<br/>}</p>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">INT I; </span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">INT I;</span></span></p>
+<p><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">main（）{ </span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">sum = 0; </span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">對於（i = 1; i &lt;= 10; i ++）{ </span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">sum + = i; </span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">print（“ $ sum”）; </span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">} </span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">print（'sum = $ sum'）; </span></span><br/><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">}</span></span></p>
 <p><iframe height="600" src="https://dartpad.dev/embed-inline.html?
 gh_owner=mdecourse&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/for&amp;theme=dart" width="800"><iframa></iframa></iframe></p>
 <p><iframe height="600" src="https://dartpad.dartlang.org/?id=d0d7491cda1803cd2878a000f2470fb6" width="800"><iframa></iframa></iframe></p>
 <p><img alt="" height="187" src="/images/1.png" width="285"/></p>
 <p><img alt="" height="156" src="/images/2.PNG" width="283"/></p>
-<p><a href="https://www.youtube.com/watch?v=h7PCrruTkko" title="期中影片">https://www.youtube.com/watch?v=h7PCrruTkko</a></p>
-<h1>USB</h1>
-<h3>USB2</h3>
+<h2>w11</h2>
 <p></p>
+<h1><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">USB</span></span></h1>
+<h3><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">USB2</span></span></h3>
+<p>
+<script>
+function getDart(dirname){
+    source = "https://dartpad.github.io/embed-dart.html?gh_owner=40823235&gh_repo=cp2019&gh_path=downloads/dart_ex/" + dirname + "&theme=dark";
+    document.getElementById("iframe").src = source ;
+}
+
+function getHtmlDart(dirname){
+    source = "https://dartpad.github.io/embed-html.html?gh_owner=40823235&gh_repo=cp2019&gh_path=downloads/dart_ex/" + dirname + "&theme=dark";
+document.getElementById("iframe").src = source ;
+}
+
+function getFlutter(dirname){
+    source = "https://dartpad.github.io/embed-flutter.html?gh_owner=40823235&gh_repo=cp2019&gh_path=downloads/dart_ex/" + dirname + "&theme=dark";
+document.getElementById("iframe").src = source ;
+}
+
+function largest(){
+document.getElementById("iframe").width = document.body.clientWidth ;
+document.getElementById("iframe").height = document.body.clientWidth*0.5 ;
+}
+
+function original(){
+document.getElementById("iframe").width = 800 ;
+document.getElementById("iframe").height = 600 ;
+}
+</script>
+<!-- 取 Dart 程式的按鈕 --></p>
+<h4>純 Dart 程式</h4>
+<p><button onclick="getDart('hello')">Hello</button> <button onclick="getDart('for')">For Loop</button> <button onclick="getDart('sum')">Sum</button> <button onclick="getDart('runge_kutta')">Runge-Kutta</button> <button onclick="getDart('rk_ex1')">RK ex1</button> <button onclick="getDart('mass_spring_damping')">Mass Spring Damping</button> <button onclick="getDart('function')">Function</button> <button onclick="getDart('fun_parameter')">Function Parameter</button> <button onclick="getDart('fat_arrow')">Fat Arrow</button></p>
+<h4>Html 程式</h4>
+<p><button onclick="getHtmlDart('roc_flag')">ROC Flag</button> <button onclick="getHtmlDart('grid')">Grid</button> <button onclick="getHtmlDart('xyplot')">X-Y Plot</button> <button onclick="getHtmlDart('slithery')">Slithery</button></p>
+<h4>Flutter 程式</h4>
+<p><button onclick="getFlutter('flutter0')">Flutter0</button> <button onclick="getFlutter('flutter1')">Flutter1</button> <button onclick="getFlutter('flutter2')">Flutter2</button> <button onclick="getFlutter('flutter3')">Flutter3</button> <button onclick="getFlutter('flutter4')">Flutter4</button> <button onclick="getFlutter('flutter_counter')">Flutter Counter</button> <button onclick="getFlutter('flutter_roc')">ROC Flag</button> <button onclick="getFlutter('flutter_mine1')">踩地雷 1</button> <button onclick="getFlutter('flutter_mine2')">踩地雷 2</button> <button onclick="getFlutter('flutter_mine3')">踩地雷 3</button> <button onclick="getFlutter('flutter_mine4')">踩地雷 4</button></p>
+<p><!-- 內建放入的 Dart 原始碼 --></p>
+<p><button onclick="largest()">放大</button> <button onclick="original()">回復</button></p>
+<p><iframe height="600" id="iframe" src="https://dartpad.dartlang.org/embed-dart.html?gh_owner=40823235&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/mass_spring_damping&amp;theme=dark" width="800"></iframe></p>
