--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -15,8 +15,8 @@ gh_owner=mdecourse&amp;gh_repo=cp2019&amp;gh_path=downloads/dart_ex/for&amp;them
 <p><img alt="" height="187" src="/images/1.png" width="285"/></p>
 <p><img alt="" height="156" src="/images/2.PNG" width="283"/></p>
 <p></p>
-<h1><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">USB</span></span></h1>
-<h3><span style="vertical-align: inherit;"><span style="vertical-align: inherit;">USB2</span></span></h3>
+<h1>USB</h1>
+<h3>USB2</h3>
 <p>
 <script>
 function getDart(dirname){
