--- a/content/home.html
+++ b/content/home.html
@@ -138,7 +138,7 @@ init_mathjax();
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='First.html'>First</a><li class='has-children'><a href='home.html'>home</a><ul class='dropdown'><li><a href='分組任務.html'>分組任務</a></li>
+                     <li><a href='First.html'>First</a><li class='has-children'><a href='home.html'>home</a><ul class='dropdown'><li><a href='分組任務.html'>分組任務</a></li></ul><li><a href='影片區.html'>影片區</a></li>
                       </ul>
                 </nav>
               </div>
@@ -149,7 +149,8 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">First << <a href='First.html'>Previous</a> <a href='分組任務.html'>Next</a> >> 分組任務<br /><h1>home</h1><br />First << <a href='First.html'>Previous</a> <a href='分組任務.html'>Next</a> >> 分組任務</div>
+    <div id="tipue_search_content">First << <a href='First.html'>Previous</a> <a href='分組任務.html'>Next</a> >> 分組任務<br /><h1>home</h1>
+<br />First << <a href='First.html'>Previous</a> <a href='分組任務.html'>Next</a> >> 分組任務</div>
         
     <!-- footer -->
       <div class="container">
