--- a/reveal/index.html
+++ b/reveal/index.html
@@ -110,9 +110,13 @@ Created by [KMOLab](https://40823235.github.io/cp2019/content/index.html)
 
 
 						
+<section data-markdown>
+    <script type="text/template">
 ## 心得
 
 ### 第17w的重點主要是用DART程式畫國旗，雖然我還不太會畫國旗，不過我會多問同學讓自己更熟悉。
+    </script>
+</section>
 </section>
 
 </div>
